edited styles.css index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,9 +42,12 @@ h3 {
 }
 
 #receiptTitle {
+  color: #e567ac;
+  text-align: center;
 }
 
 #receiptDescription {
+  text-align: center;
 }
 
 #receiptTotal {
