edited styles.css index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,12 @@ h3 {
   }
 
 #coverPhoto {
+    max-width: 100%;
 }
 
 #addToppings {
+  text-align: center;
+  color: #e567ac;
 }
 
 #checkoutButton {
