--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 .jumbotron {
   text-align: center;
-
+  background-image: url('../img/pizza.jpg');
+  background-position: 35% 32%;
+  background-size: cover;
+  color: White;
+  text-shadow: black 0.3em 0.3em 0.3em;
 }
 h2 {
   text-align: center;
